# Finance_App

./: .env  LICENSE  README.md  pyproject.toml
finance_agent/: agent.py  tools.py
finance_agent/data/: charts.py  scheduler.py  yahoo_client.py
finance_agent/gui/: __main__.py  app.py  main_window.py
finance_agent/llm/: local_agent.py
finance_agent/mcp/: __main__.py  protocol.py  router.py
finance_agent/obsidian/: templates.py  writer.py
finance_agent/plugins/: loader.py
server/: server.py
